--- a/暑假集训/图论总结.md
+++ b/暑假集训/图论总结.md
@@ -1,3 +1,4 @@
+
 # 图论总结
 
 ## [魔法森林](https://www.lydsy.com/JudgeOnline/problem.php?id=3669)
@@ -214,5 +215,43 @@ $n$点$m$边有向图，从$1 \rightarrow n$的所有路径中，第$k$短的是
 堆优化的$Dij$有一个性质，在第$k$次从堆中取出到达某个点的值的时候，这个值是到这个点第$k$长的路径。证明我懒得搞，记着就对了。看到这个结论，我恍然大雾，这，跑$Dij$模板不就对了么。$TLE$。
 为什么会$T$?简单分析一下的话，我们花费太多的时间在计算$[1, n - 1]$的某个长度的路径上。我们需要尽量减少对于$[1, n - 1]$的状态的取出。在堆上的优化有啥，$A*$。我们尽量多取出关于$n$的状态。也就是说，估价函数必须偏爱$n$。如何偏爱，距离$n$近的优先取出。
 
-这是这道题本身，我再说说这道题之外的东西。
-假如说，我不会$Dij$，我要用$SPFA$硬拿那40分，我该怎么拿？
+### 备注
+
+我用类似的方法卡过$NOIP2017D1T3$，但是并没有成功，多卡了10分。
+果然难题大多只有一种解法。
+
+## [逛公园](https://www.luogu.org/problemnew/show/P3953)
+
+> tag: 最短路, DP
+
+### 题目大意
+
+$n$点$m$边有向图，令$1 \rightarrow n$的最短路是$d$，求长度$\leq d + k$的，$1 \rightarrow n$的路径个数。$k \leq 50$。
+
+### 题解
+
+我没有理解到为什么要建反图，或者说考场上我想不到为啥要建立反图。
+状态设计很简单$f[i][j]$，到$i$，比$dis[i]$多$j$的边的路径个数。
+然后剩下的先咕咕咕，等我想清楚再说。
+
+## [宝藏](https://www.luogu.org/problemnew/show/P3959)
+
+> tag: DFS
+
+### 题解
+
+略微奇怪，lyd说这个解法是错的。
+暂时咕咕咕，因为我不清楚为什么延展出来是一棵树。
+
+### 关键代码
+
+```cpp
+inline void dfs(int k) {
+    for (int i = 0; i < n; ++i) if(k & (1 << i)) 
+        for (int j = 0; j < n; ++j)
+            if(!(k & (1 << j)) && f[k | (1 << j)] > f[k] + edges[i][j] * d[i] && edges[i][j] != 0x3f3f3f3f)
+                f[k | (1 << j)] = f[k] + edges[i][j] * d[i], d[j] = d[i] + 1, dfs(k | (1 << j));
+}
+```
+
+## 货车运输
