最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -1,5 +1,6 @@
 逆序对统计。
-有$n$个块，每块有几个分数统计方
+有$n$个块，每块有$m_i$个分数可以选择，构造每块的分数，使得最后逆序对的数量最大。$n \le 20$，$a_i \le 100$。
+$20$，肯定是状压$dp$。接下来的问题就是如何转移逆序对的个数。贪心转移?$f[S]$。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTIyNTg4Mzc4XX0=
+eyJoaXN0b3J5IjpbLTExNTEzNDI2NzhdfQ==
 -->
