最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -1,6 +1,10 @@
-逆序对统计。
+# 逆序对统计。
 有$n$个块，每块有$m_i$个分数可以选择，构造每块的分数，使得最后逆序对的数量最大。$n \le 20$，$a_i \le 100$。
 $20$，肯定是状压$dp$。接下来的问题就是如何转移逆序对的个数。贪心转移?$f[S]$。这样吧，按照分数从小到大进行转移。转移到$a_i$，$S \rightarrow$已经填写了分数的块的个数。
+
+# Game
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM1MTg4MDg4MV19
+eyJoaXN0b3J5IjpbMjA3NDc0Njg0NSwxMzUxODgwODgxXX0=
 -->
