最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -6,7 +6,9 @@ $20$，肯定是状压$dp$。接下来的问题就是如何转移逆序对的个
 
 $S = a + b$
 
+https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1803
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODk4NzA2NTM3LDEzNTE4ODA4ODFdfQ==
+eyJoaXN0b3J5IjpbMjEzNjYyODY4Niw4OTg3MDY1MzcsMTM1MT
+g4MDg4MV19
 -->
