最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -11,7 +11,10 @@ https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1952
 https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1800
 https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1779
 
+
+# $HDOJ6397$
+本质上是ranh
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgwNTc5MTU2NSw4OTg3MDY1MzcsMTM1MT
-g4MDg4MV19
+eyJoaXN0b3J5IjpbNDkwMzE4NzIyLDE4MDU3OTE1NjUsODk4Nz
+A2NTM3LDEzNTE4ODA4ODFdfQ==
 -->
