--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -13,8 +13,9 @@ https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1779
 
 
 # $HDOJ6397$
-本质上是ranh
+求$X_1 + X_2 + X_3 + \cdots + X_m = K$的解的个数。$X_i \in [1, n]$。$1 \le n, m, k \le 10^5$。
+有了$X_i \in [1, n]$这个限制就很麻烦了啊...我们讨论一下情况吧，如果不考虑这个条件，答案就是$\binom{m + k - 1}{m - 1}$。但是有了限制该怎么办?当答案中有一个$X$超过$n$的时候，
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDkwMzE4NzIyLDE4MDU3OTE1NjUsODk4Nz
+eyJoaXN0b3J5IjpbNDY5MzQ4MDQ1LDE4MDU3OTE1NjUsODk4Nz
 A2NTM3LDEzNTE4ODA4ODFdfQ==
 -->
