最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -14,8 +14,12 @@ https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1779
 
 # $HDOJ6397$
 求$X_1 + X_2 + X_3 + \cdots + X_m = K$的解的个数。$X_i \in [1, n]$。$1 \le n, m, k \le 10^5$。
-有了$X_i \in [1, n]$这个限制就很麻烦了啊...我们讨论一下情况吧，如果不考虑这个条件，答案就是$\binom{m + k - 1}{m - 1}$。但是有了限制该怎么办?当答案中有一个$X$超过$n$的时候，// TODO(gug)
+有了$X_i \in [1, n]$这个限制就很麻烦了啊...我们讨论一下情况吧，如果不考虑这个条件，答案就是$\binom{m + k - 1}{m - 1}$。但是有了限制该怎么办?当答案中有一个$X$超过$n$的时候，// TODO(咕咕咕)
+
+# $\sum_{i = 1}^{n}{[\gcd(i, n) = x]}$
+$\gcd(i, n) = x \rightarrow \gcd(\frac{i}{x}, \frac{n}{x}) = 1$。
+求$\sum{[\gcd(\frac{i}{x}, \frac{n}{x}) = 1]}$，$t = \frac{i}{x}$，
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcwNjcyMDIyOSwxODA1NzkxNTY1LDg5OD
-cwNjUzNywxMzUxODgwODgxXX0=
+eyJoaXN0b3J5IjpbLTEyNzk0NDM3OTEsMTgwNTc5MTU2NSw4OT
+g3MDY1MzcsMTM1MTg4MDg4MV19
 -->
