最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -18,8 +18,9 @@ https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1779
 
 # $\sum_{i = 1}^{n}{[\gcd(i, n) = x]}$
 $\gcd(i, n) = x \rightarrow \gcd(\frac{i}{x}, \frac{n}{x}) = 1$。
-求$\sum{[\gcd(\frac{i}{x}, \frac{n}{x}) = 1]}$，$t = \frac{i}{x}$，
+求$\sum{[\gcd(\frac{i}{x}, \frac{n}{x}) = 1]}$，$t = \frac{i}{x}$。
+$\sum_{t = 1}^{\lfloor \frac{n}{x} \rfloor}{[\gcd(t, \frac{n}{x})]}$。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNzk0NDM3OTEsMTgwNTc5MTU2NSw4OT
+eyJoaXN0b3J5IjpbLTE5MjMyODUyNzYsMTgwNTc5MTU2NSw4OT
 g3MDY1MzcsMTM1MTg4MDg4MV19
 -->
