--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -17,11 +17,12 @@ https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1779
 有了$X_i \in [1, n]$这个限制就很麻烦了啊...我们讨论一下情况吧，如果不考虑这个条件，答案就是$\binom{m + k - 1}{m - 1}$。但是有了限制该怎么办?当答案中有一个$X$超过$n$的时候，// TODO(咕咕咕)
 
 # $\sum_{i = 1}^{n}{\gcd(i, n)}$
-$\su$
+转化问题，$\sum_{i = 1}^{n}[\gcd(i, n) = x]$
 $\gcd(i, n) = x \rightarrow \gcd(\frac{i}{x}, \frac{n}{x}) = 1$。
 求$\sum{[\gcd(\frac{i}{x}, \frac{n}{x}) = 1]}$，$t = \frac{i}{x}$。
 $\sum_{t = 1}^{\lfloor \frac{n}{x} \rfloor}{[\gcd(t, \lfloor \frac{n}{x}\rfloor) = 1]}$。
+枚举$x | n$，$\sum_{x |}\varphi(\frac{n}{x})$
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTAzMjM1MzUzLDE4MDU3OTE1NjUsODk4Nz
-A2NTM3LDEzNTE4ODA4ODFdfQ==
+eyJoaXN0b3J5IjpbLTE3NDIxNDU1MjAsMTgwNTc5MTU2NSw4OT
+g3MDY1MzcsMTM1MTg4MDg4MV19
 -->
