--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -22,8 +22,9 @@ $\gcd(i, n) = x \rightarrow \gcd(\frac{i}{x}, \frac{n}{x}) = 1$。
 求$\sum{[\gcd(\frac{i}{x}, \frac{n}{x}) = 1]}$，$t = \frac{i}{x}$。
 $\sum_{t = 1}^{\lfloor \frac{n}{x} \rfloor}{[\gcd(t, \lfloor \frac{n}{x}\rfloor) = 1]}$。
 枚举$x | n$，$\sum_{x | n}{\varphi(\frac{n}{x})}$。
-暴力枚举的根号算法过不去啊。
+暴力枚举的根号算法能过，那就根号算法呗。
+复杂度$O(\sqrt{n})$。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5NjQ0NTU0MiwxODA1NzkxNTY1LDg5OD
+eyJoaXN0b3J5IjpbLTM0MjIyNzAxOSwxODA1NzkxNTY1LDg5OD
 cwNjUzNywxMzUxODgwODgxXX0=
 -->
