最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -23,8 +23,8 @@ $\gcd(i, n) = x \rightarrow \gcd(\frac{i}{x}, \frac{n}{x}) = 1$。
 $\sum_{t = 1}^{\lfloor \frac{n}{x} \rfloor}{[\gcd(t, \lfloor \frac{n}{x}\rfloor) = 1]}$。
 枚举$x | n$，$\sum_{x | n}{\varphi(\frac{n}{x})}$。
 暴力枚举的根号算法能过，那就根号算法呗。
-复杂度$O(\sqrt{n})$。
+$O(d\sqrt{n})$。$d$为约数个数。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM0MjIyNzAxOSwxODA1NzkxNTY1LDg5OD
+eyJoaXN0b3J5IjpbLTU1MDc5MTgxMCwxODA1NzkxNTY1LDg5OD
 cwNjUzNywxMzUxODgwODgxXX0=
 -->
