最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -24,7 +24,12 @@ $\sum_{t = 1}^{\lfloor \frac{n}{x} \rfloor}{[\gcd(t, \lfloor \frac{n}{x}\rfloor)
 枚举$x | n$，$\sum_{x | n}{\varphi(\frac{n}{x})}$。
 暴力枚举的根号算法能过，那就根号算法呗。
 $O(d\sqrt{n})$。$d$为约数个数。
+
+# q姐题
+
+T1
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU1MDc5MTgxMCwxODA1NzkxNTY1LDg5OD
-cwNjUzNywxMzUxODgwODgxXX0=
+eyJoaXN0b3J5IjpbLTE1MjY4NDE2NTMsLTU1MDc5MTgxMCwxOD
+A1NzkxNTY1LDg5ODcwNjUzNywxMzUxODgwODgxXX0=
 -->
