最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -28,8 +28,8 @@ $O(d\sqrt{n})$。$d$为约数个数。
 # q姐题
 
 T1
-
+考虑按位取反
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MjY4NDE2NTMsLTU1MDc5MTgxMCwxOD
-A1NzkxNTY1LDg5ODcwNjUzNywxMzUxODgwODgxXX0=
+eyJoaXN0b3J5IjpbMTAyNTk3MzQ2LC01NTA3OTE4MTAsMTgwNT
+c5MTU2NSw4OTg3MDY1MzcsMTM1MTg4MDg4MV19
 -->
