--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -28,8 +28,9 @@ $O(d\sqrt{n})$。$d$为约数个数。
 # q姐题
 
 T1
-考虑按位取反
+$n$个数中塞
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAyNTk3MzQ2LC01NTA3OTE4MTAsMTgwNT
-c5MTU2NSw4OTg3MDY1MzcsMTM1MTg4MDg4MV19
+eyJoaXN0b3J5IjpbLTEzMTA4NzA1NjgsMTAyNTk3MzQ2LC01NT
+A3OTE4MTAsMTgwNTc5MTU2NSw4OTg3MDY1MzcsMTM1MTg4MDg4
+MV19
 -->
