最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -22,9 +22,9 @@ $\sum_{t = 1}^{\lfloor \frac{n}{x} \rfloor}{[\gcd(t, \lfloor \frac{n}{x}\rfloor)
 暴力枚举的根号算法能过，那就根号算法呗。
 $O(d\sqrt{n})$。$d$为约数个数。
 
-
+考虑每一个数字都是
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ2MTE5NzE0NywxMDI1OTczNDYsLTU1MD
-c5MTgxMCwxODA1NzkxNTY1LDg5ODcwNjUzNywxMzUxODgwODgx
-XX0=
+eyJoaXN0b3J5IjpbLTE5NTMyNDIyMjksMTAyNTk3MzQ2LC01NT
+A3OTE4MTAsMTgwNTc5MTU2NSw4OTg3MDY1MzcsMTM1MTg4MDg4
+MV19
 -->
