--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -22,9 +22,12 @@ $\sum_{t = 1}^{\lfloor \frac{n}{x} \rfloor}{[\gcd(t, \lfloor \frac{n}{x}\rfloor)
 暴力枚举的根号算法能过，那就根号算法呗。
 $O(d\sqrt{n})$。$d$为约数个数。
 
-考虑每一个数字都是
+考虑每一个数字都是$0 \ 1$。
+我如何塞入运算符，使得最后的运算值为0
+（一位太简单，全都塞$\&$，或全都取反...）
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTMyNDIyMjksMTAyNTk3MzQ2LC01NT
-A3OTE4MTAsMTgwNTc5MTU2NSw4OTg3MDY1MzcsMTM1MTg4MDg4
-MV19
+eyJoaXN0b3J5IjpbMTMxOTkxMDkyNSwxMDI1OTczNDYsLTU1MD
+c5MTgxMCwxODA1NzkxNTY1LDg5ODcwNjUzNywxMzUxODgwODgx
+XX0=
 -->
