最终集训/2018 - 10 - 18.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 18.md
+++ b/最终集训/2018 - 10 - 18.md
@@ -25,9 +25,9 @@ $O(d\sqrt{n})$。$d$为约数个数。
 考虑每一个数字都是$0 \ 1$。
 我如何塞入运算符，使得最后的运算值为0
 （一位太简单，全都塞$\&$，或全都取反...）
-
+*[<del><]
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMxOTkxMDkyNSwxMDI1OTczNDYsLTU1MD
+eyJoaXN0b3J5IjpbLTk3NDY2ODUwNCwxMDI1OTczNDYsLTU1MD
 c5MTgxMCwxODA1NzkxNTY1LDg5ODcwNjUzNywxMzUxODgwODgx
 XX0=
 -->
