最终集训/2018 - 10 - 19.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 19.md
+++ b/最终集训/2018 - 10 - 19.md
@@ -26,8 +26,8 @@ $nxt[i]$表示$i$到下一个为$a[i]$的最小距离。线段树中维护的就
 获取树的直径如何获取呢？
 $f[x][2]$表示以$x$为根的子树中离$x$最远的点和次远的点。
 由于的树随机，所以树的深度约为$\log{n}$。
-我们现在需要快速获取$[l, r]$
+我们现在需要快速获取$[l, r]$，抛开$[1, l - 1]$的影响，的最大$f[i][0] + f[i][1]$。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTk5MzA2MTI4LC0xMDEyNDAzODk2XX0=
+eyJoaXN0b3J5IjpbMTg3MjgyODY3NSwtMTAxMjQwMzg5Nl19
 -->
