--- a/最终集训/2018 - 10 - 19.md
+++ b/最终集训/2018 - 10 - 19.md
@@ -28,6 +28,11 @@ $f[x][2]$表示以$x$为根的子树中离$x$最远的点和次远的点。
 由于的树随机，所以树的深度约为$\log{n}$。
 我们现在需要快速获取$[l, r]$，抛开$[1, l - 1]$的影响，的最大$f[i][0] + f[i][1]$。
 
+$dis[a] \ge dis[b] + c$。
+$dis[a] \le dis[b] + c$。
+后者为三角形不等式，我们需要化简前者。
+$$
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg3MjgyODY3NSwtMTAxMjQwMzg5Nl19
+eyJoaXN0b3J5IjpbMTkwNDUwODIzOSwtMTAxMjQwMzg5Nl19
 -->
