--- a/最终集训/2018 - 10 - 19.md
+++ b/最终集训/2018 - 10 - 19.md
@@ -36,10 +36,12 @@ $a$比$b$至少大$c$，换句话说$b$不超过$a - c$。
 $dis[b] \le dis[a] - c$。
 如果$dis[a] = dis[b] + c$。
 连两条边$dis[a] \ge dis[b] + c$，$dis[a] \le dis[b] + c$。
+则$(b \rightarrow a):(c)$。
+$$
 $dis[b] \le dis[a] - c$，$dis[a] \le dis[b] + c$。跑最短路。
-可能出现负环的情况，就用$dfs$的最短路好了、
+可能出现负环的情况，就用$dfs$的最短路好了。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTkwODMwNzAsLTEwMTI0MDM4OTZdfQ
-==
+eyJoaXN0b3J5IjpbLTE3MTY2NjAxMDUsLTEzMTkwODMwNzAsLT
+EwMTI0MDM4OTZdfQ==
 -->
