--- a/最终集训/2018 - 10 - 19.md
+++ b/最终集训/2018 - 10 - 19.md
@@ -37,11 +37,11 @@ $dis[b] \le dis[a] - c$。
 如果$dis[a] = dis[b] + c$。
 连两条边$dis[a] \ge dis[b] + c$，$dis[a] \le dis[b] + c$。
 则$(b \rightarrow a):(c)$。
-$$
+$(a \rightarrow b):(-c)$。
 $dis[b] \le dis[a] - c$，$dis[a] \le dis[b] + c$。跑最短路。
 可能出现负环的情况，就用$dfs$的最短路好了。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MTY2NjAxMDUsLTEzMTkwODMwNzAsLT
-EwMTI0MDM4OTZdfQ==
+eyJoaXN0b3J5IjpbLTQ1MjAwOTQ2OSwtMTMxOTA4MzA3MCwtMT
+AxMjQwMzg5Nl19
 -->
