最终集训/2018 - 10 - 22.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 22.md
+++ b/最终集训/2018 - 10 - 22.md
@@ -22,7 +22,7 @@ emmmmmm细节处理参考了一个题解，因为自己的某个写法怎么都$
 化简，$\sum_{i = 1}^{n}\sum_{j = 1}^{m} (n - i \cdot  \lfloor\frac{n}{i}\rfloor) \times (m - j \cdot  \lfloor\frac{m}{j}\rfloor), i \ne j$，我们需要消掉$i = j$的情况。$\sum_{i = 1}^{min(n, m)}{(n - i \cdot  \lfloor\frac{n}{i}\rfloor)(m - i \cdot  \lfloor\frac{m}{i}\rfloor)}$，最后得出的公式就是$$\sum_{i = 1}^{n}\sum_{j = 1}^{m} (n - i \cdot  \lfloor\frac{n}{i}\rfloor) \times (m - j \cdot  \lfloor\frac{m}{j}\rfloor) - \sum_{i = 1}^{min(n, m)}{(n - i \cdot  \lfloor\frac{n}{i}\rfloor)(m - i \cdot  \lfloor\frac{m}{i}\rfloor) }$$
 展开公式得
 $$\sum_{i = 1}^{n}\sum_{j = 1}^{m} (n - i \cdot  \lfloor\frac{n}{i}\rfloor) \times (m - j \cdot  \lfloor\frac{m}{j}\rfloor) - \sum_{i = 1}^{min(n, m)}{(n\cdot m - i \cdot (n\cdot\lfloor\frac{m}{i}\rfloor + m\cdot\lfloor\frac{n}{i}\rfloor) + i^2\lfloor\frac{n}{i}\rfloor\lfloor\frac{m}{i}\rfloor)}$$
-数论分块求解。
+数论分块求解。（其实是我懒得写）
 
 # 尺取法
 
@@ -68,6 +68,17 @@ $QAQ$
 考虑另外的方法w
 以行列建点。我们需要选择$n$条边，使得每个点刚好被覆盖一次。也就是$n$边$n$点问题。注意，这不是最小基环生成树，因为最后的图可能不连通。我们对于边从小到大扫，顺便维护当前联通块中有无环。如果$x, y$两边都有环，不能合并。剩下的贪心合并即可。
 
+# $LG1966$
+
+给出两个数列，$A$，$B$，可以对这俩数列中任意相邻两个进行交换，交换至$\sum{(a_i - b_i)^2}$最小。
+按照我的经验来说，最小肯定是$A, B$都排过序之后的...
+嘛，先不忙，我们先证明一下。
+$\sum{(a_i - b_i)^2} = \sum{a_i^2 - 2a_ib_i + b_i^2}$，有俩玩意儿一定不变，所以就是使得$\sum{a_ib_i}$最大。
+嗯...结论可能有些问题，但是可以基于此结论进行拓展。$a, b$都排序表示$a$的第$i$大对应$b$的第$i$大。
+其实这个问题就是$B$最少作多少次交换能交换到$A$。
+最长公共子序列。
+求$A, B$的最长公共子序列。
+至于求法，排列的最长公共子序列是把$A$映射到$B$数组里求最长不下降子序列？别，是逆序对（跪）
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUwNzk3MTgxMF19
+eyJoaXN0b3J5IjpbLTEyMzUzODY3MjRdfQ==
 -->
