--- a/最终集训/2018 - 10 - 22.md
+++ b/最终集训/2018 - 10 - 22.md
@@ -82,3 +82,9 @@ $\sum{(a_i - b_i)^2} = \sum{a_i^2 - 2a_ib_i + b_i^2}$，有俩玩意儿一定不
 <!--stackedit_data:
 eyJoaXN0b3J5IjpbLTEyMzUzODY3MjRdfQ==
 -->
+
+如果$a, b$二进制下$1$的个数一个奇一个偶。则这俩$xor$二进制下为奇数。我只会$80$的...
+$f[i][j]$表示到$i$，当前序列的公差是$j$。复杂度$O(n^2k)$
+考虑优化。我们用$g[i]$表示公差为$i$的前缀和。$O(nk)$
+考虑$60$分吧，图论建模稳了。
+$u \rightarrow v$表示选了$u$就可以选$v$，但是没有连边的一定不能选。图中不会出现环，所以是$DAG$。考虑拓扑序，拿走一个点之后，就可以顺便拿走链上的所有点，也就是最长链。跑多次，把点取完，有点类似某套毒瘤的$T1$。
