最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -170,6 +170,7 @@ int main() {
 尺取法之二，我觉得我再练习一发证明吧？
 这题让求一个最小的区间，包含$a \rightarrow z$的所有字符
 我们首先移动右端点到$r$。所有右端点在$[1, r - 1]$的区间都不满足条件。我们移动左端点到$l$，所以$[l, r]$是右端点在$[1, r]$的区间的最优解。我们再次移动右端点，到$r'$，这样所有左端点在$[r +1, r' - 1]$的都不满足条件，左端点在$[1, r]$的值也都$\ge$目前求得的最优解，成立！
+其实，一般区间满足单调性，并且可递推，这题就能用$tpt$。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NTYyMDIyNzFdfQ==
+eyJoaXN0b3J5IjpbLTE4ODM4NDE5MDBdfQ==
 -->
