最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -173,6 +173,10 @@ int main() {
 其实，一般区间满足单调性，并且区间之间可递推，这题就能用$tpt$。
 好了， 我们来写代码吧！
 
+```cpp
+
+```
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTkyNTc0MjVdfQ==
+eyJoaXN0b3J5IjpbMTgyNTA1MDYzNiwtMjAxOTI1NzQyNV19
 -->
