最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -174,9 +174,29 @@ int main() {
 好了， 我们来写代码吧！
 
 ```cpp
+#include <bits/stdc++.h>
+using namespace std;
 
+const int N = 1e5 + 5;
+int n, cnt[30]; char s[N];
+int main() {
+  scanf("%s", s + 1);
+  n = strlen(s + 1);
+  int l = 1, r = 1, sta = 0, ans = n + 1;
+  for (;;) {
+    while (r <= n && sta != 26)
+      if (++cnt[s[r++] - 'A'] == 1) ++sta;
+    if (sta < 26) break;
+    ans = min(ans, r - l);
+    if (--cnt[s[l++] - 'A'] == 0) --sta;
+  }
+  if (ans > n) puts("No Solution");
+  else cout << ans;
+}
 ```
 
+妈的，尺取法真妙！
+这怎么有点单调队列呢，咋普及算法了。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyNTA1MDYzNiwtMjAxOTI1NzQyNV19
+eyJoaXN0b3J5IjpbMTk3NTQ2NjgzNiwtMjAxOTI1NzQyNV19
 -->
