--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -165,6 +165,7 @@ int main() {
 }
 ```
 这是尺取法的板子，并不好调...
+**注意，此写法的$l$和$r$表示取$l$不取$r$**
 
 [51nod 1127](https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1127)
 尺取法之二，我觉得我再练习一发证明吧？
@@ -198,5 +199,6 @@ int main() {
 妈的，尺取法真妙！
 这怎么有点单调队列呢，咋普及算法了。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3NTQ2NjgzNiwtMjAxOTI1NzQyNV19
+eyJoaXN0b3J5IjpbLTEzMTA2MjIzNTgsLTIwMTkyNTc0MjVdfQ
+==
 -->
