最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -197,8 +197,7 @@ int main() {
 ```
 
 妈的，尺取法真妙！
-这怎么有点单调队列呢，咋普及算法了。
+这怎么有点单调队列呢，咋成普及算法了、
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTA2MjIzNTgsLTIwMTkyNTc0MjVdfQ
-==
+eyJoaXN0b3J5IjpbLTU4NzE4Nzc2MSwtMjAxOTI1NzQyNV19
 -->
