最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -198,6 +198,9 @@ int main() {
 
 妈的，尺取法真妙！
 这怎么有点单调队列呢，咋成普及算法了、
+
+回到
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4NzE4Nzc2MSwtMjAxOTI1NzQyNV19
+eyJoaXN0b3J5IjpbLTI0MjAwMjE1MSwtNTg3MTg3NzYxLC0yMD
+E5MjU3NDI1XX0=
 -->
