最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -200,8 +200,8 @@ int main() {
 这怎么有点单调队列呢，咋成普及算法了、
 
 回到$Pro06$，这题的$judge$是用尺取法解决的。
-我们
+我们通过尺取法来$judge$区间众数$\ge k$的区间的个数
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2Mjk3MjY3NSwtNTg3MTg3NzYxLC0yMD
+eyJoaXN0b3J5IjpbMTM5NjkwNDc3MSwtNTg3MTg3NzYxLC0yMD
 E5MjU3NDI1XX0=
 -->
