最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -200,8 +200,10 @@ int main() {
 这怎么有点单调队列呢，咋成普及算法了、
 
 回到$Pro06$，这题的$judge$是用尺取法解决的。
-我们通过尺取法来$judge$区间众数$\ge k$的区间的个数
+我们通过尺取法来$judge$区间众数出现次数$\ge k$的区间的个数。
+右端点固定的情况下，左移左端点，区间众数出现的次数一定会$$
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM5NjkwNDc3MSwtNTg3MTg3NzYxLC0yMD
-E5MjU3NDI1XX0=
+eyJoaXN0b3J5IjpbMTI5NjYyMjE2MSwxMzk2OTA0NzcxLC01OD
+cxODc3NjEsLTIwMTkyNTc0MjVdfQ==
 -->
