最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -201,9 +201,9 @@ int main() {
 
 回到$Pro06$，这题的$judge$是用尺取法解决的。
 我们通过尺取法来$judge$区间众数出现次数$\ge k$的区间的个数。
-右端点固定的情况下，左移左端点，区间众数出现的次数一定会$$
+右端点固定的情况下，左移左端点，区间众数出现的次数一定会变大。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5NjYyMjE2MSwxMzk2OTA0NzcxLC01OD
+eyJoaXN0b3J5IjpbMjExNzE3NjM5NiwxMzk2OTA0NzcxLC01OD
 cxODc3NjEsLTIwMTkyNTc0MjVdfQ==
 -->
