最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -166,6 +166,7 @@ int main() {
 ```
 这是尺取法的板子，并不好调...
 **注意，此写法的$l$和$r$表示取$l$不取$r$**
+update: 后来的写法是标准的$[l, r]$。
 
 [51nod 1127](https://www.51nod.com/onlineJudge/questionCode.html#!problemId=1127)
 尺取法之二，我觉得我再练习一发证明吧？
@@ -201,9 +202,57 @@ int main() {
 
 回到$Pro06$，这题的$judge$是用尺取法解决的。
 我们通过尺取法来$judge$区间众数出现次数$\ge k$的区间的个数。
-右端点固定的情况下，左移左端点，区间众数出现的次数一定会变大。
+右端点固定的情况下，左移左端点，区间众数出现的次数一定会变大。我们用尺取法扫一次即可得到答案。看起来很难调的样子...
+我还真调不出来，放弃了...
+尺取法计数的思路大概如下:
+枚举右端点，更新最大值的只可能是这个右端点。
+因为我不满足了，就移动右端点，所以最大值一定在右端点取得...然后$[1, l]$的所有作为左端点都可行。
 
+## $Problem \ 07$
+
+[51nod 1349](http://www.51nod.com/onlineJudge/questionCode.html#!problemId=1349)
+题本身很简单。
+找出作为$x$能管理的区间范围最大值。
+用两个单调栈
+
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+
+const int N = 100005;
+int n, a[N], s[N], top, l[N], r[N];
+int main() {
+  scanf("%d", &n);
+  for (int i = 1; i <= n; ++i) 
+    scanf("%d", &a[i]);
+  for (int i = 1; i <= n; ++i) {
+    while (top && a[i] >= a[s[top]]) --top;
+    l[i] = top == 0 ? 1 : s[top] + 1;
+    s[++top] = i;
+  }
+  top = 0;
+  for (int i = n; i >= 1; --i) {
+    while (top && a[i] > a[s[top]]) --top;
+    r[i] = top == 0 ? n : s[top] - 1;
+    s[++top] = i;
+  }
+  for (int i = 1; i <= n; ++i)
+    cout << l[i] << " " << r[i] << endl;
+}
+```
+顺带一提这个单调栈的写法。
+正着，倒着扫一次。
+但是，我们发现，正着扫的时候是$a[i] \ge a[s[top]]$，但倒着扫的时候是$a[i] > a[s[top]]$。这样的写法能够处理相同数字的问题，都是把相同数字的值归类到“最右端”的同一个数上。
+
+然后区间的个数就是当前数管理的区间的左边乘右边。弄一个后缀和，维护答案。$O(1)$回答。
+题还是蛮不错的。
+
+## $Problem \ 08$
+
+[51nod 1103](http://www.51nod.com/onlineJudge/questionCode.html#!problemId=1103)
+很不错的一道题。
+我们
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjExNzE3NjM5NiwxMzk2OTA0NzcxLC01OD
-cxODc3NjEsLTIwMTkyNTc0MjVdfQ==
+eyJoaXN0b3J5IjpbMzUzNTA1NTkxLDIxMTcxNzYzOTYsMTM5Nj
+kwNDc3MSwtNTg3MTg3NzYxLC0yMDE5MjU3NDI1XX0=
 -->
