最终集训/2018 - 10 - 24.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 24.md
+++ b/最终集训/2018 - 10 - 24.md
@@ -251,8 +251,16 @@ int main() {
 
 [51nod 1103](http://www.51nod.com/onlineJudge/questionCode.html#!problemId=1103)
 很不错的一道题。
-我们
+求出$\bmod n$意义以下的前缀和，如果存在一个$s[i] = 0$，那就输出$a[1 \rightarrow j]$，那么剩下的域$\in [1, n - 1]$，$n$个数放进$n - 1$个位置，一定存在一个位置$> 1$，那么一定存在一个$s[r] - s[l - 1] = 0$。输出$a[l \rightarrow r]$即可。
+
+## $Problem \ 09$
+
+[CF618F](https://www.luogu.org/problemnew/show/CF618F)
+
+同学在我问他$Pro08$的时候给我安利了这道题
+给出可重集合$A, B$，$|A| = |B|$，求$A$中的一个可重子集，与从$B$中选择的可重子集和相同。$n \le 1000000$， $a_i, b_i \le n$。
+入手点在$a_i, b_i \le n$。考虑两两作差之后的值，设为$c_i$，$c_i = a_i - b_i$，$c_i \in [1 - n, n - 1]$，总共$2n$种取值。如果$a_i = b_i$为$0$的话，直接成立。由于抽屉原理，$a_i - b_i$
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzUzNTA1NTkxLDIxMTcxNzYzOTYsMTM5Nj
-kwNDc3MSwtNTg3MTg3NzYxLC0yMDE5MjU3NDI1XX0=
+eyJoaXN0b3J5IjpbMTI2NTIzMjAxOSwyMTE3MTc2Mzk2LDEzOT
+Y5MDQ3NzEsLTU4NzE4Nzc2MSwtMjAxOTI1NzQyNV19
 -->
