最终集训/2018 - 10 - 25.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 25.md
+++ b/最终集训/2018 - 10 - 25.md
@@ -93,9 +93,28 @@ if (f[root] >= 0) ++use;
 从底部开始$\text{dfs}$，显然，$\text{dep}$越小，能够覆盖的点越多。所以在某个点，如果这个点的父亲能够覆盖其所有子节点，其一定不需要被作为关键点。对于这个点，如果其父亲不能覆盖，那么这个点一定需要被设为关键点。
 如果其子节点某个能够覆盖的话，一定不需要其再添加覆盖，因为其父亲节点一定有一个能够覆盖更多的。（咋有点啃老的味道，不过大概就是这个意思）
 
-## 运输计划
+终于$tmd$读懂$d$题了。
+大概是这个意思
+选取一个位置跳伞。
+某些区间能够帮他续命。
+倒着预处理？
+傻逼了
+注意到“下降”
+然后xjb二分
+$AC$。
 
+啊，读懂$e$题了。
+大概是这个意思
+给出，从树中只删除某条边，形成的两个联通块中最大的点的编号是...不会，溜了
+
+看$\text{f}$题吧。
+大意如下：
+有两条轴
+轴上有点。
+从任意一个点射出一条射线，问最多可以经过多少个点。
+考虑能够经过一段的三角形。
+放弃
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTgyNDk4MzYsLTU3OTAzNzU0Ml19
+eyJoaXN0b3J5IjpbNDI2MTQ2Mjg2LC01NzkwMzc1NDJdfQ==
 -->
