最终集训/2018 - 10 - 25.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 25.md
+++ b/最终集训/2018 - 10 - 25.md
@@ -112,9 +112,13 @@ $AC$。
 有两条轴
 轴上有点。
 从任意一个点射出一条射线，问最多可以经过多少个点。
-考虑能够经过一段的三角形。
-放弃
+考虑能够经过一段的三角形。放弃、、、
+
+$51nod \ 1449$
+砝码重量$w^0, w^1, w^{n\cdots}$。
+问是否有一种方案，使得$m + \sum{w^y} = \sum{w^x}$。
+首先，转化进制，把$m$转化为$w$进制。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDI2MTQ2Mjg2LC01NzkwMzc1NDJdfQ==
+eyJoaXN0b3J5IjpbLTE4NjcxMTkxMzUsLTU3OTAzNzU0Ml19
 -->
