--- a/最终集训/2018 - 10 - 25.md
+++ b/最终集训/2018 - 10 - 25.md
@@ -117,8 +117,9 @@ $AC$。
 $51nod \ 1449$
 砝码重量$w^0, w^1, w^{n\cdots}$。
 问是否有一种方案，使得$m + \sum{w^y} = \sum{w^x}$。
-首先，转化进制，把$m$转化为$w$进制。
+能否通过幂次的加减凑出$m$。	
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NjcxMTkxMzUsLTU3OTAzNzU0Ml19
+eyJoaXN0b3J5IjpbLTE5MTk4NjkwODUsLTE4NjcxMTkxMzUsLT
+U3OTAzNzU0Ml19
 -->
