最终集训/2018 - 10 - 25.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 25.md
+++ b/最终集训/2018 - 10 - 25.md
@@ -118,8 +118,9 @@ $51nod \ 1449$
 砝码重量$w^0, w^1, w^{n\cdots}$。
 问是否有一种方案，使得$m + \sum{w^y} = \sum{w^x}$。
 能否通过幂次的加减凑出$m$。	
+也就是从$1 \rightarrow n$中，选出能够凑出$n$的$w$幂次值。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MTk4NjkwODUsLTE4NjcxMTkxMzUsLT
-U3OTAzNzU0Ml19
+eyJoaXN0b3J5IjpbMTczMDE0MDgyMSwtMTkxOTg2OTA4NSwtMT
+g2NzExOTEzNSwtNTc5MDM3NTQyXX0=
 -->
