--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -140,9 +140,9 @@ $\text{BZOJ4144}$
 
 然后我写炸了，然后爆零了。
 瓶颈出来了，$s$的完全图的最小生成树怎么处理。
-考虑图中的这种路径，$s, k, t$都是加油站，并且存在$s \rightarrow k$，$k \rightarrow t$，那么$s \rightarrow t$一定没有存在的必要。怎么实现呢？考虑$s \rightarrow k$上的非关键点，
+考虑图中的这种路径，$s, k, t$都是加油站，并且存在$s \rightarrow k$，$k \rightarrow t$，那么$s \rightarrow t$一定没有存在的必要。怎么实现呢？考虑$s \rightarrow k$上的非关键点，将这些非关键点分为两部分，到$s$最近的，到$k$最近的。
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0MzkwNjQ0MV19
+eyJoaXN0b3J5IjpbMTYzNDQ2NTc4MV19
 -->
