最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -140,9 +140,9 @@ $\text{BZOJ4144}$
 
 然后我写炸了，然后爆零了。
 瓶颈出来了，$s$的完全图的最小生成树怎么处理。
-考虑图中的这种路径，$s, k, t$都是加油站，并且存在$s \rightarrow k$，$k \rightarrow t$，那么$s \rightarrow t$一定没有存在的必要。怎么实现呢？考虑$s \rightarrow k$上的非关键点，将这些非关键点分为两部分，到$s$最近的，到$k$最近的。我们设$from[i]$表示离$i$最近的关键点的编号，$dis[i]$表示$i$到$from[i]$的最短路。对于原图中的$u \rightarrow v$，$dis[u] + w + dis[v]$就是某两个关键点中的唯一距离，过滤掉经过其他点的。稍微解释一下，我就卡这里了：$dis[u]$一定不会经过任意一个加油站，如果经过的话，$dis[u]$就是当前点到经过的加油站的距离。$dis[v]$同理。我们建立超级远点
+考虑图中的这种路径，$s, k, t$都是加油站，并且存在$s \rightarrow k$，$k \rightarrow t$，那么$s \rightarrow t$一定没有存在的必要。怎么实现呢？考虑$s \rightarrow k$上的非关键点，将这些非关键点分为两部分，到$s$最近的，到$k$最近的。我们设$from[i]$表示离$i$最近的关键点的编号，$dis[i]$表示$i$到$from[i]$的最短路。对于原图中的$u \rightarrow v$，$dis[u] + w + dis[v]$就是某两个关键点中的唯一距离，过滤掉经过其他点的。稍微解释一下，我就卡这里了：$dis[u]$一定不会经过任意一个加油站，如果经过的话，$dis[u]$就是当前点到经过的加油站的距离。$dis[v]$同理。我们建立超级源点
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwODY2MzU4MTNdfQ==
+eyJoaXN0b3J5IjpbMTIwODA1MTM0MywtMTA4NjYzNTgxM119
 -->
