最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -2,7 +2,7 @@
 
 > 解题报告
 
-# $\text{T1}$
+## $\text{T1}$
 
 给出数列$A$，你需要自行选定$q$个长度为$k$的区间,每次删除区间内的最小值(当最小值有多个时任选一个),使得删除的$q$个数中最小值和最大值的差尽量小。$n \le 100000$。
 
@@ -129,7 +129,7 @@ int main() {
 }
 ```
 
-# $\text{T2}$
+## $\text{T2}$
 
 $n$点$m$边无向带权图。$s$个加油站，有$q$次询问，给出起点，终点，起点终点都是加油站，给出一辆车，车有油量上限$k_i$，油量满的情况下能行驶$k_i$的距离，问能否从$s \rightarrow t$。$n, s, q \le 100000$。
 
@@ -140,9 +140,163 @@ $\text{BZOJ4144}$
 
 然后我写炸了，然后爆零了。
 瓶颈出来了，$s$的完全图的最小生成树怎么处理。
-考虑图中的这种路径，$s, k, t$都是加油站，并且存在$s \rightarrow k$，$k \rightarrow t$，那么$s \rightarrow t$一定没有存在的必要。怎么实现呢？考虑$s \rightarrow k$上的非关键点，将这些非关键点分为两部分，到$s$最近的，到$k$最近的。我们设$from[i]$表示离$i$最近的关键点的编号，$dis[i]$表示$i$到$from[i]$的最短路。对于原图中的$u \rightarrow v$，$dis[u] + w + dis[v]$就是某两个关键点中的唯一距离，过滤掉经过其他点的。稍微解释一下，我就卡这里了：$dis[u]$一定不会经过任意一个加油站，如果经过的话，$dis[u]$就是当前点到经过的加油站的距离。$dis[v]$同理跑$dij$，把加油站全部扔进$\text{priority\_queue}$。就可以初始化$from$和$dis$数组了。
+考虑图中的这种路径，$s, k, t$都是加油站，并且存在$s \rightarrow k$，$k \rightarrow t$，那么$s \rightarrow t$一定没有存在的必要。怎么实现呢？考虑$s \rightarrow k$上的非关键点，将这些非关键点分为两部分，到$s$最近的，到$k$最近的。我们设$from[i]$表示离$i$最近的关键点的编号，$dis[i]$表示$i$到$from[i]$的最短路。对于原图中的$u \rightarrow v$，$dis[u] + w + dis[v]$就是某两个关键点中的唯一距离，过滤掉经过其他点的。稍微解释一下，我就卡这里了：$dis[u]$一定不会经过任意一个加油站，如果经过的话，$dis[u]$就是当前点到经过的加油站的距离。$dis[v]$同理跑$dij$，把加油站全部扔进$\text{priority\_queue}$。就可以初始化$from$和$dis$数组了。对于图不连通，可以一开始并查集维护一发，也可以建虚边，看个人喜好。
 
+代码：
 
+```cpp
+#include <bits/stdc++.h>
+#define ll long long
+using namespace std;
+
+inline char gc() {
+  static char buf[1 << 18], *fs, *ft;
+  return (fs == ft && (ft = (fs = buf) + fread(buf, 1, 1 << 18, stdin)), fs == ft) ? EOF : *fs++;
+}
+inline int read() {
+  register int k = 0, f = 1;
+  register char c = gc();
+  for (; !isdigit(c); c = gc())
+    if (c == '-') f = -1;
+  for (; isdigit(c); c = gc()) k = (k << 3) + (k << 1) + (c - '0');
+  return k * f;
+}
+const int N = 2e5 + 5;
+int n, s, m, c[N];
+int head[N], ver[N << 1], nxt[N << 1], edge[N << 1], tot;
+int vis[N], from[N], fa[N];
+ll dis[N];
+inline int find(int x) { return x == fa[x] ? x : fa[x] = find(fa[x]); }
+inline void addedge(int u, int v, int w) {
+  ver[tot] = v;
+  edge[tot] = w;
+  nxt[tot] = head[u];
+  head[u] = tot++;
+}
+namespace MST {
+struct Edge {
+  int u, v, w;
+  bool operator<(const Edge &e) const { return w < e.w; }
+} a[N << 1];
+int head[N], ver[N << 1], nxt[N << 1], edge[N << 1], tot, cnt, fa[N];
+int vis[N], f[N][30], g[N][30], dep[N];
+inline int find(int x) { return x == fa[x] ? x : fa[x] = find(fa[x]); }
+inline void addedge(int u, int v, int w) {
+  ver[tot] = v;
+  edge[tot] = w;
+  nxt[tot] = head[u];
+  head[u] = tot++;
+}
+inline void dfs(int x) {
+  vis[x] = 1;
+  for (int i = head[x], to; ~i; i = nxt[i])
+    if (!vis[to = ver[i]]) {
+      dep[to] = dep[x] + 1;
+      f[to][0] = x;
+      g[to][0] = edge[i];
+      dfs(to);
+    }
+}
+inline void init() {
+  for (int i = 1; i <= n; ++i) fa[i] = i;
+  memset(head, -1, sizeof head);
+  tot = 0;
+  sort(a + 1, a + 1 + cnt);
+  for (int i = 1; i <= cnt; ++i) {
+    int x = find(a[i].u), y = find(a[i].v);
+    if (x != y) {
+      fa[x] = y;
+      addedge(a[i].u, a[i].v, a[i].w);
+      addedge(a[i].v, a[i].u, a[i].w);
+      // cout << "Add: " << a[i].u << " " << a[i].v << " " << a[i].w << endl;
+    }
+  }
+  for (int i = 1; i <= s; ++i)
+    if (!vis[c[i]]) dfs(c[i]);
+  for (int t = 1; t <= 25; ++t)
+    for (int i = 1, x; i <= s; ++i) {
+      f[x = c[i]][t] = f[f[x][t - 1]][t - 1];
+      g[x][t] = max(g[x][t - 1], g[f[x][t - 1]][t - 1]);
+    }
+}
+inline int query(int x, int y) {
+  if (dep[x] < dep[y]) swap(x, y);
+  int ans = 0;
+  for (int t = 25; t >= 0; --t)
+    if (dep[f[x][t]] >= dep[y])
+      ans = max(ans, g[x][t]), x = f[x][t];
+  if (x == y) return ans;
+  for (int t = 25; t >= 0; --t)
+    if (f[x][t] != f[y][t]) {
+      ans = max(ans, g[x][t]);
+      ans = max(ans, g[y][t]);
+      x = f[x][t], y = f[y][t];
+    }
+  ans = max(ans, g[x][0]);
+  ans = max(ans, g[y][0]);
+  return ans;
+}
+}  // namespace MST
+inline void init() {
+  static queue<int> q;
+  while (!q.empty()) q.pop();
+  memset(dis, 0x3f, sizeof dis);
+  for (int i = 1; i <= s; ++i) {
+    from[c[i]] = c[i];
+    dis[c[i]] = 0;
+    vis[c[i]] = 1;
+    q.push(c[i]);
+  }
+  while (!q.empty()) {
+    int u = q.front();
+    q.pop();
+    vis[u] = 0;
+    for (int i = head[u], to; ~i; i = nxt[i])
+      if (dis[to = ver[i]] > dis[u] + edge[i]) {
+        dis[to] = dis[u] + edge[i];
+        from[to] = from[u];
+        if (!vis[to]) vis[to] = 1, q.push(to);
+      }
+  }
+  for (int i = 1; i <= n; ++i)
+    for (int j = head[i], to; ~j; j = nxt[j])
+      if (from[i] != from[to = ver[j]]) {
+        MST::a[++MST::cnt].u = from[i];
+        MST::a[MST::cnt].v = from[to];
+        MST::a[MST::cnt].w = dis[i] + dis[to] + edge[j];
+      }
+}
+int main() {
+  memset(head, -1, sizeof head);
+  n = read(), s = read(), m = read();
+  for (int i = 1; i <= s; ++i) c[i] = read();
+  for (int i = 1; i <= n; ++i) fa[i] = i;
+  for (int i = 1, u, v, w; i <= m; ++i) {
+    u = read(), v = read(), w = read();
+    addedge(u, v, w);
+    addedge(v, u, w);
+    int x = find(u), y = find(v);
+    if (x != y) fa[x] = y;
+  }
+  init();
+  MST::init();
+  int x, y, b, q;
+  q = read();
+  while (q--) {
+    x = read(), y = read(), b = read();
+    if (find(x) == find(y)) {
+      if (MST::query(x, y) > b)
+        puts("NIE");
+      else
+        puts("TAK");
+    } else
+      puts("NIE");
+  }
+}
+```
+
+## $\text{T3}$
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY0NzYyMDIzNSwtMTA4NjYzNTgxM119
+eyJoaXN0b3J5IjpbLTE4MTg3NjUxMjksMTY0NzYyMDIzNSwtMT
+A4NjYzNTgxM119
 -->
