最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -296,7 +296,9 @@ int main() {
 ```
 
 ## $\text{T3}$
+
+给出$n$个函数$f$，每个函数$f_i = \sum_{j = l_i}^{r_i}{a_j}$。作$a$的单点修改，查询$f$的区间和$f_l \rightarrow f_r$。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MTg3NjUxMjksMTY0NzYyMDIzNSwtMT
-A4NjYzNTgxM119
+eyJoaXN0b3J5IjpbLTkyMTU3MDYyOSwxNjQ3NjIwMjM1LC0xMD
+g2NjM1ODEzXX0=
 -->
