最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -298,7 +298,9 @@ int main() {
 ## $\text{T3}$
 
 给出$n$个函数$f$，每个函数$f_i = \sum_{j = l_i}^{r_i}{a_j}$。作$a$的单点修改，查询$f$的区间和$f_l \rightarrow f_r$。
+
+考虑暴力，对$a$维护$BIT$，作单点修改和区间和查询。每次访问$f$的区间和时，暴力求$f_l \rightarrow f_r$。查询复杂度$O(n\log{n})$，修改复杂度$O(\log{n)$。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyMTU3MDYyOSwxNjQ3NjIwMjM1LC0xMD
-g2NjM1ODEzXX0=
+eyJoaXN0b3J5IjpbLTc3NjMxNjMsMTY0NzYyMDIzNSwtMTA4Nj
+YzNTgxM119
 -->
