最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -299,8 +299,9 @@ int main() {
 
 给出$n$个函数$f$，每个函数$f_i = \sum_{j = l_i}^{r_i}{a_j}$。作$a$的单点修改，查询$f$的区间和$f_l \rightarrow f_r$。
 
-考虑暴力，对$a$维护$BIT$，作单点修改和区间和查询。每次访问$f$的区间和时，暴力求$f_l \rightarrow f_r$。查询复杂度$O(n\log{n})$，修改复杂度$O(\log{n})$。我们发现复杂度并不平衡，考虑用分块综合复杂度，具体来说，将$f$分为$\sqrt{n}$块，在块内对$f$按照$r$排序，并且求出差分数组，表示每个位置被$f$覆盖了多少次。
+考虑暴力，对$a$维护$BIT$，作单点修改和区间和查询。每次访问$f$的区间和时，暴力求$f_l \rightarrow f_r$。查询复杂度$O(n\log{n})$，修改复杂度$O(\log{n})$。我们发现复杂度并不平衡，考虑用分块综合复杂度，具体来说，将$f$分为$\sqrt{n}$块，在块内对$f$按照$r$排序，并且求出差分数组，表示每个位置被$f$覆盖了多少次。对块进行整体修改时直接统计当前位置被覆盖的次数，对块进行部分修改时用之前的暴力。
+代码没有。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ5MzgzNDEzMSwxNjQ3NjIwMjM1LC0xMD
+eyJoaXN0b3J5IjpbMTQ0ODEwMTkyOSwxNjQ3NjIwMjM1LC0xMD
 g2NjM1ODEzXX0=
 -->
