--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -301,7 +301,13 @@ int main() {
 
 考虑暴力，对$a$维护$BIT$，作单点修改和区间和查询。每次访问$f$的区间和时，暴力求$f_l \rightarrow f_r$。查询复杂度$O(n\log{n})$，修改复杂度$O(\log{n})$。我们发现复杂度并不平衡，考虑用分块综合复杂度，具体来说，将$f$分为$\sqrt{n}$块，在块内对$f$按照$r$排序，并且求出差分数组，表示每个位置被$f$覆盖了多少次。对块进行整体修改时直接统计当前位置被覆盖的次数，对块进行部分修改时用之前的暴力。
 代码没有。
+
+# $\text{QwQ}$
+
+## $\text{ARC103F}$
+
+给出每个点到其他点距离的综合，每条边的bianquan
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0ODEwMTkyOSwxNjQ3NjIwMjM1LC0xMD
-g2NjM1ODEzXX0=
+eyJoaXN0b3J5IjpbLTE3MTg2NjczNjksMTQ0ODEwMTkyOSwxNj
+Q3NjIwMjM1LC0xMDg2NjM1ODEzXX0=
 -->
