最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -306,8 +306,8 @@ int main() {
 
 ## $\text{ARC103F}$
 
-给出每个点到其他点距离的综合，每条边的bianquan
+给出每个点到其他点距离的总和，每条边的边权为$1$。构造一棵树，满足题中给出的总和。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MTg2NjczNjksMTQ0ODEwMTkyOSwxNj
-Q3NjIwMjM1LC0xMDg2NjM1ODEzXX0=
+eyJoaXN0b3J5IjpbMTY5NzYzMTYwNywxNDQ4MTAxOTI5LDE2ND
+c2MjAyMzUsLTEwODY2MzU4MTNdfQ==
 -->
