最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -308,8 +308,8 @@ int main() {
 
 给出每个点到其他点距离的总和，每条边的边权为$1$。构造一棵树，满足题中给出的总和。
 
-对于$u \rightarrow v$，设$siz[x]$为$x$的子树大小。$d[u] + siz[u] - siz[v] = d[v]$。
+对于$u \rightarrow v$，设$siz[x]$为$x$的子树大小。$d[u] + siz[u] - siz[v] = d[v]$。首先考虑ye
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ3NTU5OTA2MCwxNDQ4MTAxOTI5LDE2ND
+eyJoaXN0b3J5IjpbMTUyNDI0Mzg0MCwxNDQ4MTAxOTI5LDE2ND
 c2MjAyMzUsLTEwODY2MzU4MTNdfQ==
 -->
