最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -309,7 +309,11 @@ int main() {
 给出每个点到其他点距离的总和，每条边的边权为$1$。构造一棵树，满足题中给出的总和。
 
 对于$u \rightarrow v$，设$siz[x]$为$x$的子树大小。$d[u] + siz[u] - siz[v] = d[v]$。假定一个根，首先考虑叶子结点，$siz[u] = 1$，则$d[fa] = d[x] + (n - 2 \cdot siz[fa])$(有误?)。
+
+## $\text{BZOJ2140}$
+
+[](https://www.lydsy.com/JudgeOnline/problem.php?id=2140)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MzkwMzYwNzYsMTQ0ODEwMTkyOSwxNj
-Q3NjIwMjM1LC0xMDg2NjM1ODEzXX0=
+eyJoaXN0b3J5IjpbNzE0NTI2MDksMTQ0ODEwMTkyOSwxNjQ3Nj
+IwMjM1LC0xMDg2NjM1ODEzXX0=
 -->
