最终集训/2018 - 10 - 29.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -312,8 +312,12 @@ int main() {
 
 ## $\text{BZOJ2140}$
 
-[](https://www.lydsy.com/JudgeOnline/problem.php?id=2140)
+[原题链接](https://www.lydsy.com/JudgeOnline/problem.php?id=2140)
+
+$7$月的考试考过$n \le 400$档，但是这里又不同了。
+看到这题想起[新型城市化](https://www.luogu.org/problemnew/show/P3731)，那题当时就没做来(雾)，重新来过。
+首先说暴力的解法， 没啥技巧性。求出
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzE0NTI2MDksMTQ0ODEwMTkyOSwxNjQ3Nj
-IwMjM1LC0xMDg2NjM1ODEzXX0=
+eyJoaXN0b3J5IjpbLTg3OTgyMzc1NCwxNDQ4MTAxOTI5LDE2ND
+c2MjAyMzUsLTEwODY2MzU4MTNdfQ==
 -->
