--- a/最终集训/2018 - 10 - 29.md
+++ b/最终集训/2018 - 10 - 29.md
@@ -316,8 +316,8 @@ int main() {
 
 $7$月的考试考过$n \le 400$档，但是这里又不同了。
 看到这题想起[新型城市化](https://www.luogu.org/problemnew/show/P3731)，那题当时就没做来(雾)，重新来过。
-首先说暴力的解法， 没啥技巧性。枚举每条边，然后看这条边删除后是否会导致最大匹配变小。这不和新型城市化一样么...我们考虑一条边作为“最大匹配”中的必须边。
+首先说暴力的解法， 没啥技巧性。枚举每条边，然后看这条边删除后是否会导致最大匹配变小。这不和新型城市化一样么...我们考虑一条边作为“最大匹配”中的必须边。如果这条$u \rightarrow v$在同一个$SCC$中，
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwODI1MTkzLDE0NDgxMDE5MjksMTY0Nz
+eyJoaXN0b3J5IjpbMzYwNDIzODk3LDE0NDgxMDE5MjksMTY0Nz
 YyMDIzNSwtMTA4NjYzNTgxM119
 -->
