最终集训/2018 - 10 - 30.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 30.md
+++ b/最终集训/2018 - 10 - 30.md
@@ -52,6 +52,10 @@ emmmm 二分真香（
 首先，选取相交的一定是相邻的区间，不可能随便选择。所以我们按照$r$排序，$r$相同的时候按照$l$小排序，这样选取的一定是一段连续的区间。
 整个过程会有$n - k$次移动，所以我们需要快速维护每一次移动之后的值。维护起来还是比较简单的，我们用两个$\text{priority\_queue}$一个维护最小的右端点，一个维护最大的左端点。每次取出最大的右端点和最小的左端点，然后求和。
 
+## $\text{SCOI2008 天平}$
+
+这么分析，首先建图。$y$fama
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc3OTU0NDU3NV19
+eyJoaXN0b3J5IjpbMTg0NzEyNzk0N119
 -->
