--- a/最终集训/2018 - 10 - 30.md
+++ b/最终集训/2018 - 10 - 30.md
@@ -54,8 +54,8 @@ emmmm 二分真香（
 
 ## $\text{SCOI2008 天平}$
 
-这么分析，首先建图。$y$fama
+这么分析，首先建图。$y$砝码比$x$砝码质量小，表示为$y \le x - 1$，放到差分约束里是$dis[y] \le dis[x] + (-1)$，$y$比$x$质量大，$dis[y] \ge dis[x] + 1$转换公式，$dis[x] \le dis[y] + (-1)$，就是$y \rightarrow x \ (-1)$。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0NzEyNzk0N119
+eyJoaXN0b3J5IjpbMTE2NDIxOTk3NF19
 -->
