--- a/最终集训/2018 - 10 - 30.md
+++ b/最终集训/2018 - 10 - 30.md
@@ -56,7 +56,9 @@ emmmm 二分真香（
 
 这么分析，首先建图。$y$砝码比$x$砝码质量小，表示为$y \le x - 1$，放到差分约束里是$dis[y] \le dis[x] + (-1)$，也就是$x \rightarrow y \ (-1)$，$y$比$x$质量大，$dis[y] \ge dis[x] + 1$转换公式，$dis[x] \le dis[y] + (-1)$，就是$y \rightarrow x \ (-1)$。考虑在什么情况下$x$确定，$y$就确定。如果$dis[x] \ge dis[y] + e$，且$dis[x] \le dis[y] + e$，也就是$dis[y] \le dis[x] - e$，边的情况就是$e(y \rightarrow x) = -e(x \rightarrow y)$。我们枚举所有的$i, j(i \ne j)$，如果$i, j$的值确认，就可以简单分类讨论得出答案。
 左边重：$A+ B > C+D$，相同：$A+B=C+D$，右边重：$A+B<C+D$，全部转化公式，$A-C <=> D-C$。
-
+等等，题意理解有问题...
+我傻逼了...
+$f[i][j]$表示$m_i - m_j$的最小值，$g[i][j]$表示$m_i - m_j$的
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjQ4MTMzMDRdfQ==
+eyJoaXN0b3J5IjpbLTI1MTE1ODkwM119
 -->
