最终集训/2018 - 10 - 30.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 30.md
+++ b/最终集训/2018 - 10 - 30.md
@@ -58,7 +58,7 @@ emmmm 二分真香（
 左边重：$A+ B > C+D$，相同：$A+B=C+D$，右边重：$A+B<C+D$，全部转化公式，$A-C <=> D-C$。
 等等，题意理解有问题...
 我傻逼了...
-$f[i][j]$表示$m_i - m_j$的最小值，$g[i][j]$表示$m_i - m_j$的
+$f[i][j]$表示$m_i - m_j$的最小值，$g[i][j]$表示$m_i - m_j$的最大值。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI1MTE1ODkwM119
+eyJoaXN0b3J5IjpbMTgyNTkyMTQwNF19
 -->
