最终集训/2018 - 10 - 30.md updated from https://stackedit.io/

--- a/最终集训/2018 - 10 - 30.md
+++ b/最终集训/2018 - 10 - 30.md
@@ -59,6 +59,8 @@ emmmm 二分真香（
 等等，题意理解有问题...
 我傻逼了...
 $f[i][j]$表示$m_i - m_j$的最小值，$g[i][j]$表示$m_i - m_j$的最大值。
+明天搞这道题吧
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyNTkyMTQwNF19
+eyJoaXN0b3J5IjpbLTE1MTE2ODkxNDAsMTgyNTkyMTQwNF19
 -->
