--- a/最终集训/2018 - 10 - 30.md
+++ b/最终集训/2018 - 10 - 30.md
@@ -61,6 +61,9 @@ emmmm 二分真香（
 $f[i][j]$表示$m_i - m_j$的最小值，$g[i][j]$表示$m_i - m_j$的最大值。
 明天搞这道题吧
 
+## $\text{LG4945}$
+
+$f[i][j][0/1]$表示在第$i$秒，已经使用$j$次魔法，当前这次是否使用魔法，能够获取的最大能量值。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MTE2ODkxNDAsMTgyNTkyMTQwNF19
+eyJoaXN0b3J5IjpbOTg4OTg2MzcsMTgyNTkyMTQwNF19
 -->
